--- a/live_streaming_with_cohosting/app/src/main/AndroidManifest.xml
+++ b/live_streaming_with_cohosting/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
     tools:targetApi="31">
     <activity
       android:name=".LiveActivity"
+      android:configChanges="locale|keyboardHidden|fontScale|orientation|screenSize|screenLayout|layoutDirection|density|uiMode"
       android:exported="false" />
     <activity
       android:name=".MainActivity"
